--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+	<thead>
+		<th>Roll number</th>
+		<th>Name</th>
+	</thead>
+	<tbody>
+		<tr>
+		<td>09</td>
+				<td>Ashish</td>
+		</tr>
+		<tr>
+		<td>09</td>
+				<td>Ashish</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
